--- a/SecureCoder/New Group/Main.storyboard
+++ b/SecureCoder/New Group/Main.storyboard
@@ -1,54 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="G2e-BY-IHo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="G2e-BY-IHo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="mWa-60-8L5">
-            <objects>
-                <viewController id="Fs6-3T-TOM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="zHC-tz-fg8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUD-Jg-zhE">
-                                <rect key="frame" x="137.5" y="308.5" width="100" height="50"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="LOGIN"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amG-gk-ocV">
-                                <rect key="frame" x="137.5" y="226.5" width="100" height="50"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="CXs-eo-QYI"/>
-                                    <constraint firstAttribute="height" constant="50" id="Nh4-Ga-e6u"/>
-                                </constraints>
-                                <state key="normal" title="SIGN UP"/>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="TUD-Jg-zhE" firstAttribute="width" secondItem="amG-gk-ocV" secondAttribute="width" id="1gj-vG-fML"/>
-                            <constraint firstItem="TUD-Jg-zhE" firstAttribute="top" secondItem="amG-gk-ocV" secondAttribute="bottom" constant="32" id="5mL-Rt-Vc5"/>
-                            <constraint firstItem="TUD-Jg-zhE" firstAttribute="centerX" secondItem="zHC-tz-fg8" secondAttribute="centerX" id="MkJ-0y-d2C"/>
-                            <constraint firstItem="TUD-Jg-zhE" firstAttribute="height" secondItem="amG-gk-ocV" secondAttribute="height" id="bQW-Ep-deP"/>
-                            <constraint firstItem="amG-gk-ocV" firstAttribute="centerX" secondItem="zHC-tz-fg8" secondAttribute="centerX" id="khi-b2-qho"/>
-                            <constraint firstItem="TUD-Jg-zhE" firstAttribute="centerY" secondItem="zHC-tz-fg8" secondAttribute="centerY" id="yax-Mv-ucZ"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Xmg-tn-qbG"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dX8-sk-Hhj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2615" y="134"/>
-        </scene>
         <!--Select Language View Controller-->
         <scene sceneID="5E1-dw-3OG">
             <objects>
@@ -118,16 +79,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dak-SI-gtm">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="YL3-KQ-qMh">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YL3-KQ-qMh" id="fFf-zy-8TC">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="dqp-vk-vjg" id="1Ic-Ra-TYG"/>
                                     <outlet property="delegate" destination="dqp-vk-vjg" id="ufL-rh-5II"/>
@@ -254,7 +205,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="855.20000000000005" y="129.98500749625188"/>
+            <point key="canvasLocation" x="1673" y="130"/>
         </scene>
         <!--Preview View Controller-->
         <scene sceneID="bOc-1K-841">
@@ -289,7 +240,91 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eNj-sj-27w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1663.2" y="133.5832083958021"/>
+            <point key="canvasLocation" x="2465" y="137"/>
+        </scene>
+        <!--Description Image Collection View Controller-->
+        <scene sceneID="olE-J6-qa1">
+            <objects>
+                <viewController storyboardIdentifier="DescriptionPageController" id="0Lw-oQ-uGt" customClass="DescriptionImageCollectionViewController" customModule="SecureCoder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nRA-5m-5zc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CgN-Zl-MGx">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="52a-5V-ucB">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="toB-VS-Jtg">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="44"/>
+                                                <state key="normal" title="PREV"/>
+                                                <connections>
+                                                    <action selector="handlePrevButton:" destination="0Lw-oQ-uGt" eventType="touchUpInside" id="KaT-lb-qbB"/>
+                                                </connections>
+                                            </button>
+                                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="oI3-OO-0tQ">
+                                                <rect key="frame" x="125" y="0.0" width="125" height="44"/>
+                                            </pageControl>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKx-h5-m8B">
+                                                <rect key="frame" x="250" y="0.0" width="125" height="44"/>
+                                                <state key="normal" title="NEXT"/>
+                                                <connections>
+                                                    <action selector="handleNextButton:" destination="0Lw-oQ-uGt" eventType="touchUpInside" id="Tgz-eN-IW6"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="52a-5V-ucB" firstAttribute="top" secondItem="CgN-Zl-MGx" secondAttribute="top" id="EEC-bt-1Wt"/>
+                                    <constraint firstItem="52a-5V-ucB" firstAttribute="leading" secondItem="CgN-Zl-MGx" secondAttribute="leading" id="Psy-LN-X97"/>
+                                    <constraint firstAttribute="bottom" secondItem="52a-5V-ucB" secondAttribute="bottom" id="RZH-YO-iPb"/>
+                                    <constraint firstAttribute="height" constant="44" id="t7e-GA-0GT"/>
+                                    <constraint firstAttribute="trailing" secondItem="52a-5V-ucB" secondAttribute="trailing" id="vuL-cI-4kZ"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mK3-RB-36a">
+                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cKR-Md-6aP">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="0Lw-oQ-uGt" id="8S8-Oh-URx"/>
+                                    <outlet property="delegate" destination="0Lw-oQ-uGt" id="q4y-4u-cgN"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3Vi-pK-L5A" firstAttribute="trailing" secondItem="CgN-Zl-MGx" secondAttribute="trailing" id="51J-37-yVr"/>
+                            <constraint firstItem="CgN-Zl-MGx" firstAttribute="top" secondItem="mK3-RB-36a" secondAttribute="bottom" id="ThI-Gd-za1"/>
+                            <constraint firstItem="mK3-RB-36a" firstAttribute="leading" secondItem="3Vi-pK-L5A" secondAttribute="leading" id="VV8-Ht-uQj"/>
+                            <constraint firstItem="3Vi-pK-L5A" firstAttribute="trailing" secondItem="mK3-RB-36a" secondAttribute="trailing" id="YZQ-ub-bQQ"/>
+                            <constraint firstItem="CgN-Zl-MGx" firstAttribute="leading" secondItem="3Vi-pK-L5A" secondAttribute="leading" id="Ycv-PB-uOL"/>
+                            <constraint firstItem="mK3-RB-36a" firstAttribute="top" secondItem="3Vi-pK-L5A" secondAttribute="top" id="vvU-J8-aGZ"/>
+                            <constraint firstItem="3Vi-pK-L5A" firstAttribute="bottom" secondItem="CgN-Zl-MGx" secondAttribute="bottom" id="ydq-bb-vqb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3Vi-pK-L5A"/>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <connections>
+                        <outlet property="bottomControlsContainerView" destination="CgN-Zl-MGx" id="Vn8-em-0mg"/>
+                        <outlet property="collectionView" destination="mK3-RB-36a" id="Jvq-Ec-Z8j"/>
+                        <outlet property="nextButton" destination="CKx-h5-m8B" id="q2v-Zr-bqH"/>
+                        <outlet property="pageControl" destination="oI3-OO-0tQ" id="0ly-T3-VzB"/>
+                        <outlet property="prevButton" destination="toB-VS-Jtg" id="Go8-mt-jaZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="906-hj-6pf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="852" y="129.98500749625188"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uUZ-Sk-0he">
