プレビュー機能を実装。

--- a/SecureCoder/Course/HTML/HTMLの基礎を学ぼう/DOCTYPE宣言/files/style.css
+++ b/SecureCoder/Course/HTML/HTMLの基礎を学ぼう/DOCTYPE宣言/files/style.css
@@ -1,5 +1,9 @@
 @[@css@]@
-#[#body {
-    font-size: 64px;
-}
-#]#
+#[#body {#]#
+#[#    /*フォントサイズを64pxに設定してください*/#]#
+#[#    #]#?[?font-size?]?#[#: #]#?[?64px?]?#[#;#]#
+#[#}#]#
+#[#.title {#]#
+#[#    /*文字色を青に設定してください*/#]#
+#[#    #]#?[?color?]?#[#: #]#?[?blue?]?#[#;#]#
+#[#}#]#
